--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,19 @@
-.App {
-  text-align: center;
-  background: rgba(50,50,150,0.3);
-  height: 100%;
-  width: 100%;
-  position: absolute;
-}
-
-body {
+section {
   /*https://css-tricks.com/perfect-full-page-background-image/ */
+  min-height: 100vh;
   background: url(assets/images/default.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  position: relative;
+}
+
+.dark-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
 }
